--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <h1 class="heading">Chào Bạn, Tôi Là Quốc Huy</h1>
         <h4 class="sub-heading">Quản Trị Viên Của Web</h4>
         <p>
-          Chúng tôi tạo ra trang web này với mục đích muốn cải thiện
-          khả năng học tập và sáng tạo của các bạn học sinh.Xin chúc các bạn có 1 trải nghiệm thú vị!
+          Chúc Bạn Có Một Ngày Tốt Lành Và Có Nhiều Trải Nghiệm Thú Vị Hơn Bên Chatbot của Chúng Tôi!<nav></nav>
       </p>
       </header>
       <!-- Suggestions List -->
