--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="nav-logo">
           <a href="#">
               <img style="position: relative; top: -40px;" class="nav-logos" src="logo.png">
+              <img style="position: relative; top: -40px; right: -150px;" class="nav-logos" src="logo3.jpg">
           </a>
           <div  style="text-align: right;">
             
@@ -27,7 +28,7 @@
         <h1 class="heading">Chào Bạn, Tôi Là Quốc Huy</h1>
         <h4 class="sub-heading">Quản Trị Viên Của Web</h4>
         <p>
-          Chúc Bạn Có Một Ngày Tốt Lành Và Có Nhiều Trải Nghiệm Thú Vị Hơn Bên Chatbot của Chúng Tôi!<nav></nav>
+          chúc bạn có nhiều trải nghiệm vui bên Chatbot của chúng tôi!<nav></nav>
       </p>
       </header>
       <!-- Suggestions List -->
