--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </a>
           <div  style="text-align: right;">
             
-          <button  onclick="window.location.href='https://narzurisreal01.github.io/Aii'"  class="btn" style="position: relative; top: -110px;">Đổi Chế Độ Hình Ảnh</button>
+          <button  onclick="window.location.href='file:///C:/Users/Quoc%20Huy/Downloads/Image/index.html'"  class="btn" style="position: relative; top: -110px;">Đổi Chế Độ Hình Ảnh</button>
           </div>
       </div>
 
